syntax = "proto3";
package proto;

message RunnerRequest {
    string uuid = 1;
    uint64 timeout = 2; // millseconds
    string yml = 3;
    string registry_host = 4;
    string registry_username = 5;
    string registry_password = 6;
    string flag_template = 7;
    bool pull_image = 8;
}

message RunnerResponse {
    string uuid = 1;
    bool succeeded = 2; // true if exploit is succeeded
    string output = 3;
}

message InfoRequest {

}

message InfoResponse {
    uint64 cpus = 1;
}

service Runner {
    rpc Run (RunnerRequest) returns (RunnerResponse);
    rpc Info (InfoRequest) returns (InfoResponse);
}